# graph_mcp

./: .gitignore  .pre-commit-config.yaml  README.md  azure.yaml  pyproject.toml
data/: AAMkAGI2THVSAAA.json  AAMkAGI2THVSAAB.json  AAMkAGI2THVSAAC.json  AAMkAGI2THVSAAD.json  AAMkAGI2THVSAAE.json  AAMkAGI2THVSAAF.json  AAMkAGI2THVSAAG.json  AAMkAGI2THVSAAH.json  AAMkAGI2THVSAAI.json  AAMkAGI2THVSAAJ.json  AAMkAGI2THVSAAK.json  AAMkAGI2THVSAAL.json  AAMkAGI2THVSAAM.json  AAMkAGI2THVSAAN.json  AAMkAGI2THVSAAO.json  sample_emails.json
infra/: main.bicep  resources.bicep
src/: app.py  requirements.txt
src/graph_helpers/: graph.py
